--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-browserify": "^6.0.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "prettier": "^2.2.1",
     "tsify": "^5.0.2",
     "typescript": "^4.2.4"
