--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
+    "@types/jquery": "^3.5.13",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "babelify": "^10.0.0",
     "eslint": "^7.24.0",
